--- a/.github/workflows/798x-UBOOT.yml
+++ b/.github/workflows/798x-UBOOT.yml
@@ -11,7 +11,7 @@ env:
   GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
   WRT_TARGET: MTK-798x
   WRT_REPO: https://github.com/1715173329/bl-mt798x-oss.git
-  WRT_BRANCH: atf-2025
+  WRT_BRANCH: master
 
 permissions: write-all
 
